# near-sdk-pure-rs

./: CODEOWNERS  Cargo.toml  README.md
near-sdk-pure/: Cargo.toml
near-sdk-pure-core/: Cargo.toml
near-sdk-pure-core/src/code_generator/: attr_sig_info.rs  impl_item_method_info.rs  item_impl_info.rs  item_struct_info.rs  item_trait_info.rs  trait_item_method_info.rs
near-sdk-pure-core/src/info_extractor/: arg_info.rs  attr_sig_info.rs  item_trait_info.rs  trait_item_method_info.rs
near-sdk-pure-core/src/metadata/: metadata_generator.rs  metadata_visitor.rs
near-sdk-pure-macros/: Cargo.toml
near-sdk-pure-macros/res/: near_blockchain.rs
near-sdk-pure-macros/src/: lib.rs
near-sdk-pure/compilation_tests/: bad_argument.rs  complex.rs  cond_compilation.rs  impl_generic.rs  impl_generic.stderr  init_function.rs  lifetime_method.rs  metadata.rs  metadata_invalid_rust.rs  metadata_invalid_rust.stderr  no_default.rs  payable_view.rs  private.rs  references.rs  regular.rs  trait_impl.rs
near-sdk-pure/src/: lib.rs  metadata.rs  promise.rs  types.rs
near-sdk-pure/src/collections/: legacy_tree_map.rs  lookup_map.rs  lookup_set.rs  mod.rs  tree_map.rs  unordered_map.rs  unordered_set.rs  vector.rs
near-sdk-pure/src/environment/: blockchain_interface.rs  env.rs  mod.rs
near-sdk-pure/src/json_types/: account.rs  integers.rs  public_key.rs  vector.rs
near-sdk-pure/src/test_utils/: mod.rs  test_env.rs
near-sdk-pure/src/utils/: mod.rs
