[package]
name = "near-sdk-pure"
version = "2.0.0"
authors = ["Near Inc <max@nearprotocol.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/near/near-sdk-rs"
homepage = "https://github.com/near/near-sdk-rs"
description = """
Rust library for writing NEAR smart contracts.
"""

[[test]]
name = "compilation_tests"
path = "compilation_tests/all.rs"

[dependencies]
# Provide near_bidgen macros.
serde = { version = "1", features = ["derive", "alloc"], default-features = false}
serde_json = {version = "1", default-features=false, features = ["alloc"]}
near-sdk-pure-macros = { path = "../near-sdk-pure-macros", version = "2.0.0"}
borsh = {version = "0.8.1", default-features=false}
bs58 = {version = "0.3", default-features=false, features=["alloc"]}
base64 = {version = "0.11", default-features=false, features=["alloc"]}
# Export dependencies for contracts
wee_alloc = { version = "0.4.5", default-features = false, features = [] }
lazy_static = {version = "1.4", default-features = false, features = ["spin_no_std"]}

[dev-dependencies]
rand = "0.7.2"
trybuild = "1.0"
rustversion = "1.0"
rand_xorshift = "0.2.0"
quickcheck = "0.9.2"

[features]
expensive-debug = []
